<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:hint="@string/change_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/changeGeneratedValueEditText" />

    <TextView
        android:text="@string/logging_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/infoTextView" />

    <CheckBox
        android:text="@string/enable_logging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loggingCheckBox" />


</LinearLayout>